added description and checkbox for completed

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @media (prefers-color-scheme: dark) {
+:root {
+    background-color: #F9F9F9;
+}
+
+@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
